2004-11-08  Øyvind Kolås  <pippin@gimp.org>

	* plug-ins/common/gqbist.c: fixed typo in construction of file
	chooser, use gtk_dialog_run instead of separate callbacks for
	the responses of the file chooser dialog.

2004-11-08  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable.c (gimp_drawable_mask_bounds)
	(gimp_drawable_mask_intersect): initialize the return values before
	checking if the drawable is attached. Keeps GIMP from going mad if
	this assertion is ever triggered.

2004-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: don't connect the help browser to
	the help system.

2004-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/selection-round.scm: register the
	compatibility procedure with the correct name.

2004-11-07  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorbutton.c: fixed unused code (tooltip was
	taken from label field).

2004-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/ifscompose/ifscompose.c: ported to GtkUIManager.

2004-11-07  Sigurd Gartmann  <sigurd-translate@brogar.org>

	* configure.in: Added support for the new locale nb to ALL_LINGUAS.

2004-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/channel_mixer.c (query): the menu label should
	have three dots (bug #157580).

2004-11-07  DindinX  <dindinx@gimp.org>

	* plug-ins/gflare/gflare.c: removed #undef GTK_DISABLE_DEPRECATED and
	use a GtkListStore instead of the long-time deprecated GtkList. Done
	some small cleanups, too.

2004-11-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrushgenerated.c: changed minimum brush radius from
	1.0 to 0.1.

	* app/widgets/gimpbrusheditor.c: allow a smaller brush radius to
	be set in the brush editor. Fixes bug #157508.

2004-11-06  Sven Neumann  <sven@gimp.org>

	* app/dialogs/scale-dialog.c (scale_dialog_reset): same fix here.

2004-11-06  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: fixed typo (bug #157513).

2004-11-06  Sven Neumann  <sven@gimp.org>
